<resources>
	<string name="app_name">WhatsApp</string>
	<string name="confirm">Confirm</string>
	<string name="makesure">OK</string>
	<string name="notice">Remind</string>
	<string name="back_txt">Go back</string>
	<string name="liuxia_txt">Leave behind</string>
	<string name="cancel">Cancel</string>
	<string name="quite">Sign out</string>
	<string name="jiesan">Dissolution</string>
	<string name="reqing">Asking...</string>
	<string name="reqsuccess">Request successful...</string>
	<string name="dealsuccess">Successful operation...</string>
	<string name="req_error">Request was aborted</string>
	<string name="songkai_cancel">Release cancel send</string>
	<string name="songkai_destrory">Burn after reading</string>
	<string name="navigate_connect">Connected</string>
	<string name="navigate_connecting">On connection</string>
	<string name="navigate_disconnect">Broken connection</string>
	<string name="error">Error~</string>
	<string name="upload">Upload failure</string>
	<string name="network_disconnect">Network disconnected</string>
	<string name="network_error">Please check whether the network is normal</string>
	<string name="copyright"></string>
	<string name="input_sample">Sample input：</string>
	<string name="login_kitout">Login kick out</string>
	<string name="login_other">You sign in on another device</string>
	<string name="login_error1">The user name and password are wrong, and the server returns resolution failure</string>
	<string name="login_error2">User name error</string>
	<string name="login_error3">Password error</string>
	<string name="login_error4">Error code:</string>
	<string name="login_error5">,Wrong user name and password</string>
	<string name="login_error6">Alarm failed</string>
	<string name="login_error7">You have been kicked out of sign in</string>
	<string name="login_error8">Press again to exit the application</string>
	<string name="common_notice1">Slide left to delete contact</string>
	<string name="common_notice2">Delete successful</string>
	<string name="common_notice3">Exit successfully</string>
	<string name="common_notice4">End time cannot be less than start time</string>
	<string name="common_notice5">Delete this message or not?</string>
	<string name="common_notice6">Are you sure you want to clear all cached information?</string>
	<string name="common_notice7">Do you want to perform local destroy and exit?</string>
	<string name="common_notice8">Local cache cleared</string>
	<string name="common_notice9">Please input once</string>
	<string name="common_notice10">Set up successfully</string>
	<string name="common_notice11">Input error, please try again</string>
	<string name="common_notice12">Please reset the unlocking pattern</string>
	<string name="common_notice13">Please draw unlock pattern</string>
	<string name="common_notice14">Built-in storage</string>
	<string name="common_notice15">External SD card</string>
	<string name="common_notice16">Please select a file to share</string>
	<string name="common_notice17">External SD card does not exist</string>
	<string name="common_notice18">Please select a picture to share</string>
	<string name="common_notice19">Scan QR code</string>
	<string name="common_notice20">Invitation</string>
	<string name="common_notice21">Invite you to the meeting, do you accept?</string>
	<string name="common_notice22">You are invited to talk. Do you want to switch to talk?</string>
	<string name="common_notice23">Handover failure</string>
	<string name="common_notice24">Dissolution or withdrawal from meeting?</string>
	<string name="common_notice25">Whether to exit this meeting?</string>
	<string name="common_notice26">File conversion failed</string>
	<string name="common_notice27">Being created</string>
	<string name="common_notice28">Loading</string>
	<string name="common_notice29">Notification successful</string>
	<string name="common_notice30">Copy to clipboard, please share</string>
	<string name="common_notice31">Modified success</string>
	<string name="common_notice32">Incomplete information</string>
	<string name="common_notice33">Location failed, please check the network</string>
	<string name="common_notice34">GPS positioning successful</string>
	<string name="common_notice35">Network positioning successful</string>
	<string name="common_notice36">Offline location is successful, and the result of offline location is also effective</string>
	<string name="common_notice37">If the server fails to locate the network, you can feed back the IMEI number and the general location time to loc-bugs@baidu.com, and someone will trace the reason</string>
	<string name="common_notice38">Failed to locate. Please try again!</string>
	<string name="common_notice39">Location failed due to different network. Please check whether the network is smooth</string>
	<string name="common_notice40">Positioning failed, please check whether the network is smooth</string>
	<string name="common_notice41">Unable to obtain effective positioning basis, which leads to positioning failure. Generally, it is due to the mobile phone. In flight mode, this result is usually caused. You can try to restart the mobile phone</string>
	<string name="common_notice42">Positioning failed, please check if it is in flight mode</string>
	<string name="common_notice43">Locating, please wait</string>
	<string name="common_notice44">[Position]</string>
	<string name="common_notice45">Location of emergency help</string>
	<string name="common_notice46">Picture greater than 100K</string>
	<string name="common_notice47">Emergency contact</string>
	<string name="common_notice48">Draw gesture password</string>
	<string name="common_notice49">Reset gesture password</string>
	<string name="common_notice50">Please draw the gesture password first</string>
	<string name="common_notice51">Untying</string>
	<string name="common_notice52">Are you sure you want to unbind?</string>
	<string name="common_notice53">Untying success</string>
	<string name="common_notice54">Untying failure</string>
	<string name="common_notice55">Error reading file</string>
	<string name="common_notice56">The other side refuses to talk to each other</string>
	<string name="common_notice57">The other side does not respond</string>
	<string name="common_notice58">The other party is not online</string>
	<string name="common_notice59">The other side quit talking</string>
	<string name="common_notice60">No intercom</string>
	<string name="common_notice61">File download failed, please try again</string>
	<string name="common_notice62">Forwarding success</string>
	<string name="common_notice63">Forward voice messages:</string>
	<string name="common_notice64">Forward video information:</string>
	<string name="common_notice65">Sorry, there is an exception in the program, collecting logs, about to exit</string>
	<string name="common_notice66">Original password error</string>
	<string name="common_notice67">Encryption module not initialized, failed to be observed</string>
	<string name="title_notice1">Personal details</string>
	<string name="title_notice2">Management model</string>
	<string name="title_notice3">Invitation to attend</string>
	<string name="title_notice4">Shared files</string>
	<string name="title_notice5">Sharing pictures</string>
	<string name="title_notice6">Local sharing</string>
	<string name="title_notice7">Conference control</string>
	<string name="title_notice8">Anonymous admission</string>
	<string name="download_notice1">Download</string>
	<string name="download_notice2">Ready to download</string>
	<string name="download_notice3">Download successful</string>
	<string name="download_notice4">Download failed</string>
	<string name="download_notice5">No network at present</string>
	<string name="install_notice1">Allow</string>
	<string name="install_notice2">Install app</string>
	<string name="install_notice3">Upgrade requires your consent to install unknown apps?</string>
	<string name="install_notice4">Install new version</string>
	<string name="install_notice5">The new version is ready. Do you want to install it?</string>
	<string name="jixing_hexin_run">Continuous operation of core services</string>
	<string name="jixing_need_allow">Permission is required&#160;</string>
	<string name="jixing_allow_notice1">Please click "OK", and in the pop-up "self start management", the&#160;</string>
	<string name="jixing_allow_notice2">&#160;The corresponding switch is on.</string>
	<string name="jixing_allow_notice3">Please click "OK", and in the pop-up "self start management", the&#160;</string>
	<string name="jixing_allow_notice4">&#160;Background operation </string>
	<string name="jixing_allow_notice5">Please click OK. In the pop-up "high power consumption in the background", the&#160;</string>
	<string name="jixing_allow_notice6">&#160;The corresponding switch is on.</string>
	<string name="jixing_allow_notice7">Need&#160;</string>
	<string name="jixing_allow_notice8">&#160;Need to add lock screen to clear white list</string>
	<string name="jixing_allow_notice9">Please click "OK" and in the pop-up "lock screen cleaning" list, the&#160;</string>
	<string name="jixing_allow_notice10">&#160;Add to lock screen to clear white list.</string>
	<string name="jixing_allow_notice11">Need to close&#160;</string>
	<string name="jixing_allow_notice12">Please click "OK" to open the&#160;</string>
	<string name="jixing_allow_notice13">The hidden model </string>
	<string name="jixing_allow_notice14">&#160;The hidden pattern .</string>
	<string name="jixing_allow_notice15">&#160;In the Shenyin mode setting, select unlimited, and then select allow positioning.</string>
	<string name="jixing_allow_notice16">&#160;Self starting</string>
	<string name="jixing_allow_notice17">&#160;Continue running when the screen is closed.</string>
	<string name="jixing_allow_notice18">Please click "OK", in the pop-up "intelligent manager", click "memory", select the "self starting application" tab, and&#160;</string>
	<string name="jixing_allow_notice19">&#160;Continue running when the screen is closed.</string>
	<string name="jixing_allow_notice20">Please click "OK", in the pop-up "battery" page, click "unmonitored application" - > add application ", check&#160;</string>
	<string name="jixing_allow_notice21">, and then click finish.</string>
	<string name="jixing_allow_notice22">&#160;Keep the background running</string>
	<string name="jixing_allow_notice23">&#160;Keep the background running .</string>
	<string name="jixing_allow_notice24">Click OK to change the background management option to keep running in the background in the pop-up application information interface.</string>
	<string name="jixing_allow_notice25">&#160;Need to be running in standby mode</string>
	<string name="jixing_allow_notice26">&#160;Keep running in standby mode.</string>
	<string name="jixing_allow_notice27">Please click "OK", and in the pop-up "standby power consumption management", the&#160;</string>
	<string name="jixing_allow_notice28">&#160;Add to the self starting white list.</string>
	<string name="my_detail_voice_set">Use the handset to play the voice</string>
	<string name="activity_chat_setting_notification">Message notification sound</string>
	<string name="activity_chat_setting_del">Clear chat</string>
	<string name="label_txt1">Send message</string>
	<string name="label_txt2">Voice call</string>
	<string name="label_txt3">Video call</string>
	<string name="label_txt5">You currently belong to 4G / 3G network, do you want to download the new version?</string>
	<string name="label_txt4">New version found</string>
	<string name="label_txt6">The new version is ready. Do you want to install it?</string>
	<string name="label_txt9">Y</string>
	<string name="label_txt10">M</string>
	<string name="label_txt11">D</string>
	<string name="label_txt12">H</string>
	<string name="label_txt13">M</string>
</resources>