<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/radius_white_solid"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_errinfo"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:paddingRight="15dp"
        android:text="@string/label_txt5"
        android:textColor="#323232" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/black666" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_errinfo"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="#323232" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="6dp"
            android:background="@color/black666" />

        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_errinfo"
            android:gravity="center"
            android:text="@string/confirm"
            android:textColor="#323232" />

    </LinearLayout>


</LinearLayout>