<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_gray"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/activity_chat_setting_notification"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:background="@color/white">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:layout_weight="1"
                    android:drawablePadding="16dp"
                    android:gravity="center_vertical"
                    android:paddingRight="15dp"
                    android:text="@string/activity_chat_setting_notification"
                    android:textColor="@color/black333"
                    android:textSize="16sp" />
                <CheckBox
                    android:id="@+id/activity_chat_setting_notification_checkbox"
                    android:layout_width="33dp"
                    android:layout_height="20dp"
                    android:checked="true"
                    android:button="@null"
                    android:background="@drawable/selector_user_detail_switch"
                    android:layout_marginRight="15dp" />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="25dp"
                android:background="@color/blackddd" />
            <LinearLayout
                android:id="@+id/activity_chat_voice_setting"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_height="55dp"
                android:background="@color/white">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="15dp"
                    android:drawablePadding="16dp"
                    android:layout_weight="1"
                    android:paddingRight="18dp"
                    android:text="@string/my_detail_voice_set"
                    android:textColor="@color/black333"
                    android:textSize="16sp" />
                <CheckBox
                    android:id="@+id/activity_chat_voice_setting_checkbox"
                    android:layout_width="33dp"
                    android:layout_height="20dp"
                    android:checked="true"
                    android:button="@null"
                    android:background="@drawable/selector_user_detail_switch"
                    android:layout_marginRight="15dp" />

            </LinearLayout>



            <RelativeLayout
                android:id="@+id/activity_chat_setting_del"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@color/white"
                android:visibility="visible">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"

                    android:drawableRight="@drawable/bt_next_press"
                    android:drawablePadding="16dp"
                    android:gravity="center_vertical"
                    android:paddingRight="15dp"
                    android:text="@string/activity_chat_setting_del"
                    android:textColor="@color/black333"
                    android:textSize="16sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="25dp"
                    android:background="@color/blackddd" />
            </RelativeLayout>

        </LinearLayout>

    </ScrollView>


</LinearLayout>