<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_F2F2F2"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingTop="25dp"
            android:paddingBottom="25dp"
            android:gravity="center_vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/contact_detail_head_img"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/ic_user" />

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_marginLeft="18dp"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/contact_detail_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/black333"
                    android:textStyle="bold"
                    android:textSize="17sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/color_EBF3FE"
                    android:textSize="15sp" />

                <TextView
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="42dp"
                    android:textColor="@color/color_EBF3FE"
                    android:textSize="15sp" />
                <TextView
                    android:id="@+id/contact_detail_Str_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/color_858585"
                    android:textSize="12sp"  />
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/contact_message"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:paddingLeft="18dp"
                android:paddingRight="18dp"
                android:drawablePadding="16dp"
                android:layout_alignParentRight="true"
                android:drawableLeft="@drawable/geren_xiaoxi"

                android:background="@drawable/selector_user_detail_function_bg"

                android:drawableRight="@drawable/bt_next_press"
                android:gravity="center_vertical"
                android:text="@string/label_txt1"
                android:textColor="@color/black333"
                android:textSize="16sp" />


            <LinearLayout
                android:id="@+id/contact_detail_buttom"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/contact_voice"
                    android:paddingLeft="18dp"
                    android:paddingRight="18dp"
                    android:layout_width="match_parent"
                    android:layout_height="49dp"
                    android:drawablePadding="16dp"

                    android:layout_centerHorizontal="true"
                    android:background="@drawable/selector_user_detail_function_bg"
                    android:drawableLeft="@drawable/geren_yuyin"
                    android:drawableRight="@drawable/bt_next_press"
                    android:gravity="center_vertical"
                    android:text="@string/label_txt2"
                    android:textColor="@color/black333"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="55dp"
                    android:background="@color/color_EAEAEA" />
                <TextView
                    android:paddingLeft="18dp"
                    android:paddingRight="18dp"
                    android:id="@+id/contact_video"
                    android:layout_width="match_parent"
                    android:layout_height="49dp"
                    android:drawableLeft="@drawable/geren_shipin"
                    android:background="@drawable/selector_user_detail_function_bg"
                    android:drawableRight="@drawable/bt_next_press"
                    android:drawablePadding="16dp"
                    android:gravity="center_vertical"
                    android:text="@string/label_txt3"
                    android:textColor="@color/black333"
                    android:textSize="16sp" />

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</RelativeLayout>